# musescore-to-mp3

./: .gitignore  Readme.md  input.mscz  pyproject.toml
src/musescore_to_mp3/: __init__.py  cli.py  converter.py  exceptions.py  mscz_handler.py  voice_matcher.py  xml_modifier.py
src/musescore_to_mp3/config/: README.md  choir_instruments.yaml  voice_highlight.yaml
